--- a/upstream/composer.json
+++ b/upstream/composer.json
@@ -15,6 +15,7 @@
         "pantheon-systems/drupal-integrations": "^8",
         "drush/drush": "^10",
         "cweagans/composer-patches": "^1.0",
-        "zaporylie/composer-drupal-optimizations": "^1.1"
+        "zaporylie/composer-drupal-optimizations": "^1.1",
+        "drupal/mysql56" : "dev-8.x-1.x--mariadb-10-0"
     }
 }
